# c_vec

./: .gitignore  CMakeLists.txt  README.md  vec.c  vec.h
src/: main.c  vec.c  vec.h
